# arxiv-paper-tracker-skill

./: .gitignore  README.md  SKILL.md  config.example.yaml  pyproject.toml
arxiv_paper_tracker/: __init__.py  cli.py  config.py  notifier.py  render.py  search.py  state.py
tests/: test_arxiv_api.py
